--- a/tasklistapp/index.html
+++ b/tasklistapp/index.html
@@ -39,6 +39,7 @@
         </div>
       </div>
     </div>
+    <!--scripts materialize-->
     <script src="https://code.jquery.com/jquery-3.2.1.js"
      integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
      crossorigin="anonymous"></script>
